[gd_scene load_steps=5 format=3 uid="uid://be3jwa5uu4i67"]

[ext_resource type="Script" uid="uid://y6mnfxbopxd4" path="res://player_reality.gd" id="1_ojcfj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gd5p4"]

[sub_resource type="SphereMesh" id="SphereMesh_gd5p4"]
radial_segments = 16
rings = 12

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_0jo7o"]
points = PackedVector3Array(-0.496354, -0.0602976, 0, -0.458652, -0.0602976, 0.189874, -0.496354, 0.0601997, 0, -0.458652, -0.0602976, -0.189971, -0.467592, -0.177369, 0, -0.350985, -0.0602976, 0.350888, -0.458652, 0.0601997, 0.189874, -0.431929, -0.177369, 0.178894, -0.330579, -0.177369, 0.330482, -0.467592, 0.177271, 0, -0.458652, 0.0601997, -0.189971, -0.350985, -0.0602976, -0.350985, -0.330579, -0.177369, -0.330579, -0.431929, -0.177369, -0.178991, -0.380234, -0.284064, -0.157516, -0.411523, -0.284064, 0, -0.380234, -0.284064, 0.157419, -0.189971, -0.0602976, 0.458555, -0.350985, 0.0601997, 0.350888, -0.330579, 0.177271, 0.330482, -0.431929, 0.177271, 0.178894, -0.29103, -0.284064, 0.290933, -0.178991, -0.177369, 0.431832, -0.380234, 0.283966, 0.157419, -0.411523, 0.283966, 0, -0.380234, 0.283966, -0.157516, -0.431929, 0.177271, -0.178991, -0.330579, 0.177271, -0.330579, -0.350985, 0.0601997, -0.350985, -0.189971, -0.0602976, -0.458652, -0.29103, -0.284064, -0.29103, -0.178991, -0.177369, -0.431929, -0.306383, -0.374315, -0.126907, -0.331648, -0.374315, 0, -0.306383, -0.374315, 0.126809, 0, -0.0602976, 0.496354, -0.189971, 0.0601997, 0.458555, 0, -0.177369, 0.467494, -0.178991, 0.177271, 0.431832, -0.29103, 0.283966, 0.290933, -0.157516, -0.284064, 0.380137, -0.234476, -0.374315, 0.234379, -0.126907, -0.374315, 0.306286, -0.306383, 0.374217, 0.126809, -0.331648, 0.374217, 0, -0.306383, 0.374217, -0.126907, -0.29103, 0.283966, -0.29103, -0.178991, 0.177271, -0.431929, -0.189971, 0.0601997, -0.458652, 0, -0.0602976, -0.496354, 0, -0.177369, -0.467592, -0.157516, -0.284064, -0.380234, -0.126907, -0.374315, -0.306383, -0.234476, -0.374315, -0.234476, -0.21475, -0.442737, -0.0890095, -0.232435, -0.442737, 0, -0.21475, -0.442737, 0.0889123, 0.189874, -0.0602976, 0.458555, 0, 0.0601997, 0.496354, 0, 0.177271, 0.467494, 0, -0.284064, 0.411426, 0.157419, -0.284064, 0.380137, 0.178894, -0.177369, 0.431832, -0.157516, 0.283966, 0.380137, -0.126907, 0.374217, 0.306286, -0.234476, 0.374217, 0.234379, 0, -0.374315, 0.331551, -0.164318, -0.442737, 0.164221, -0.0890095, -0.442737, 0.214653, -0.21475, 0.442639, 0.0889123, -0.232435, 0.442639, 0, -0.21475, 0.442639, -0.0890095, -0.234476, 0.374217, -0.234476, -0.126907, 0.374217, -0.306383, -0.157516, 0.283966, -0.380234, 0, 0.177271, -0.467592, 0, 0.0601997, -0.496354, 0.189874, -0.0602976, -0.458652, 0.178894, -0.177369, -0.431929, 0.157419, -0.284064, -0.380234, 0, -0.284064, -0.411523, 0, -0.374315, -0.331648, -0.0890095, -0.442737, -0.21475, -0.164318, -0.442737, -0.164318, -0.0846368, -0.485513, -0.0846368, -0.110582, -0.485513, -0.0458652, -0.119716, -0.485513, 0, -0.110582, -0.485513, 0.045768, -0.0846368, -0.485513, 0.0845396, 0.350888, -0.0602976, 0.350888, 0.189874, 0.0601997, 0.458555, 0.330482, -0.177369, 0.330482, 0.178894, 0.177271, 0.431832, 0.157419, 0.283966, 0.380137, 0, 0.283966, 0.411426, 0.126809, -0.374315, 0.306286, 0.290933, -0.284064, 0.290933, 0, 0.374217, 0.331551, -0.0890095, 0.442639, 0.214653, -0.164318, 0.442639, 0.164221, 0, -0.442737, 0.232338, 0.0889123, -0.442737, 0.214653, -0.0458652, -0.485513, 0.110485, 0, -0.485513, 0.119619, -0.0846368, 0.485415, 0.0845396, -0.110582, 0.485415, 0.045768, -0.119716, 0.485415, 0, -0.110582, 0.485415, -0.0458652, -0.0846368, 0.485415, -0.0846368, -0.164318, 0.442639, -0.164318, -0.0890095, 0.442639, -0.21475, 0, 0.374217, -0.331648, 0, 0.283966, -0.411523, 0.157419, 0.283966, -0.380234, 0.178894, 0.177271, -0.431929, 0.189874, 0.0601997, -0.458652, 0.350888, -0.0602976, -0.350985, 0.330482, -0.177369, -0.330579, 0.290933, -0.284064, -0.29103, 0.126809, -0.374315, -0.306383, 0.0889123, -0.442737, -0.21475, 0, -0.442737, -0.232435, 0, -0.485513, -0.119716, -0.0458652, -0.485513, -0.110582, 0, -0.5, 0, 0.458555, -0.0602976, 0.189874, 0.350888, 0.0601997, 0.350888, 0.330482, 0.177271, 0.330482, 0.431832, -0.177369, 0.178894, 0.290933, 0.283966, 0.290933, 0.126809, 0.374217, 0.306286, 0.234379, -0.374315, 0.234379, 0.306286, -0.374315, 0.126809, 0.380137, -0.284064, 0.157419, 0.0889123, 0.442639, 0.214653, 0, 0.442639, 0.232338, 0, 0.485415, 0.119619, -0.0458652, 0.485415, 0.110485, 0.045768, -0.485513, 0.110485, 0.0845396, -0.485513, 0.0845396, 0.164221, -0.442737, 0.164221, 0, 0.5, 0, -0.0458652, 0.485415, -0.110582, 0, 0.485415, -0.119716, 0, 0.442639, -0.232435, 0.0889123, 0.442639, -0.21475, 0.126809, 0.374217, -0.306383, 0.290933, 0.283966, -0.29103, 0.330482, 0.177271, -0.330579, 0.350888, 0.0601997, -0.350985, 0.458555, -0.0602976, -0.189971, 0.431832, -0.177369, -0.178991, 0.380137, -0.284064, -0.157516, 0.306286, -0.374315, -0.126907, 0.234379, -0.374315, -0.234476, 0.164221, -0.442737, -0.164318, 0.0845396, -0.485513, -0.0846368, 0.045768, -0.485513, -0.110582, 0.110485, -0.485513, -0.0458652, 0.119619, -0.485513, 0, 0.110485, -0.485513, 0.045768, 0.496354, -0.0602976, 0, 0.458555, 0.0601997, 0.189874, 0.467494, -0.177369, 0, 0.431832, 0.177271, 0.178894, 0.380137, 0.283966, 0.157419, 0.306286, 0.374217, 0.126809, 0.234379, 0.374217, 0.234379, 0.214653, -0.442737, 0.0889123, 0.331551, -0.374315, 0, 0.411426, -0.284064, 0, 0.164221, 0.442639, 0.164221, 0.0845396, 0.485415, 0.0845396, 0.045768, 0.485415, 0.110485, 0.110485, 0.485415, 0.045768, 0.119619, 0.485415, 0, 0.110485, 0.485415, -0.0458652, 0.0845396, 0.485415, -0.0846368, 0.045768, 0.485415, -0.110582, 0.164221, 0.442639, -0.164318, 0.234379, 0.374217, -0.234476, 0.380137, 0.283966, -0.157516, 0.431832, 0.177271, -0.178991, 0.306286, 0.374217, -0.126907, 0.458555, 0.0601997, -0.189971, 0.214653, -0.442737, -0.0890095, 0.232338, -0.442737, 0, 0.496354, 0.0601997, 0, 0.467494, 0.177271, 0, 0.411426, 0.283966, 0, 0.331551, 0.374217, 0, 0.214653, 0.442639, 0.0889123, 0.232338, 0.442639, 0, 0.214653, 0.442639, -0.0890095)

[node name="RealitySub" type="RigidBody3D"]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
physics_material_override = SubResource("PhysicsMaterial_gd5p4")
gravity_scale = 0.0
linear_damp = 0.25
angular_damp = 1.0
script = ExtResource("1_ojcfj")

[node name="player" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_gd5p4")
skeleton = NodePath("../..")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(2.145, 0, 0, 0, 2.145, 0, 0, 0, 2.145, -0.297834, 0, -0.0680761)
shape = SubResource("ConvexPolygonShape3D_0jo7o")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.10686, 0.661368, 0.000972033)

[node name="Spotlight" type="SpotLight3D" parent="."]
transform = Transform3D(0.00209722, -0.00258538, -0.999995, 0.948575, 0.31655, 0.00117099, 0.316545, -0.948572, 0.00311629, 0.154438, 0.0529901, 0)
spot_range = 73.3411
spot_angle = 81.0182

[node name="AudioListener3D" type="AudioListener3D" parent="."]

[node name="RayCastDown" type="RayCast3D" parent="."]
transform = Transform3D(3.2399, -0.00748904, 0.0084558, 0.0242759, 0.999971, -0.00436266, -0.00842288, 0.00136601, 3.23999, 0, 0, 0)
target_position = Vector3(0, -8, 0)

[node name="RayCastUp" type="RayCast3D" parent="."]
transform = Transform3D(3.2399, -0.00748904, 0.0084558, 0.0242759, 0.999971, -0.00436266, -0.00842288, 0.00136601, 3.23999, 0, 0, 0)
target_position = Vector3(0, 8, 0)

[node name="RayCastLeft" type="RayCast3D" parent="."]
transform = Transform3D(3.2399, -0.00748904, 0.0084558, 0.0242759, 0.999971, -0.00436266, -0.00842288, 0.00136601, 3.23999, 0, 0, 0)
target_position = Vector3(0, 8, 0)

[node name="RayCastRight" type="RayCast3D" parent="."]
transform = Transform3D(3.2399, -0.00748904, 0.0084558, 0.0242759, 0.999971, -0.00436266, -0.00842288, 0.00136601, 3.23999, 0, 0, 0)
target_position = Vector3(0, 8, 0)

[node name="RayCastBack" type="RayCast3D" parent="."]
transform = Transform3D(3.2399, -0.00748904, 0.0084558, 0.0242759, 0.999971, -0.00436266, -0.00842288, 0.00136601, 3.23999, 0, 0, 0)
target_position = Vector3(0, 8, 0)
